--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,7 @@
         <nav>
         <a href="#">
             <img src="./img/logo.png" alt="logo" class="logo">
-            <span class="marca">CatShop</span>
+            <p class="marca">CatShop</p>
             </a>
             <ul>
                 <li><a href="./pages/productos.html">Productos</a></li>
@@ -47,13 +48,17 @@
     <footer>
             <img src="./img/logo.png" alt="logo" class="logo">
             <img src="./img/gmail.png" alt="gmail" class="logo">
-            <span>lorem.ipsum@gmail.com</span>
+            <p>lorem.ipsum@gmail.com</p>
             <a href="https://www.instagram.com/" target="_blank">
                 <img src="./img/logoinstagram.png" alt="instagram" class="logo">
             </a>
-            <span>CatShop - 2024 - Todos los derechos reservados</span>
+            <p>CatShop - 2024 - Todos los derechos reservados</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
 </html>
+<!--BOOTSTRAP: Mejorar header y footer-->
+<!--GRID COMUN: Organizar la página-->
