--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,7 @@
         <nav>
         <a href="../index.html">
             <img src="../img/logo.png" alt="logo" class="logo">
-            <span class="marca">CatShop</span>
+            <p class="marca">CatShop</p>
             </a>
             <ul>
                 <li><a href="productos.html">Productos</a></li>
@@ -34,27 +35,29 @@
 
     <main>
         <h1>Contacto</h1>
-        <span>Podes encontrarnos en nuestro local</span>
+        <p>Podes encontrarnos en nuestro local</p>
         <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.98402065547197!2d-60.57381295439696!3d-33.89294600060821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b9b55dd69e9eb7%3A0xa13a466429410869!2sCucha%20Cucha%20Pergamino!5e0!3m2!1ses!2sar!4v1720731567310!5m2!1ses!2sar" width="400px" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <span>O enviarnos un mensaje</span><br>
-        <span>A nuestro Whatsapp, al +54 xxxx xxxxxx</span><br>
-        <span>A nuestro Instagram, @catshop123</span>
+        <p>O enviarnos un mensaje</p><br>
+        <p>A nuestro Whatsapp, al +54 xxxx xxxxxx</p><br>
+        <p>A nuestro Instagram, @catshop123</p>
         
     </main>
 
     <footer>
         <img src="../img/logo.png" alt="logo" class="logo">
         <img src="../img/gmail.png" alt="gmail" class="logo">
-        <span>lorem.ipsum@gmail.com</span>
+        <p>lorem.ipsum@gmail.com</p>
         <a href="https://www.instagram.com/" target="_blank">
             <img src="../img/logoinstagram.png" alt="instagram" class="logo">
         </a>
-        <span>CatShop - 2024 - Todos los derechos reservados</span>
-</footer>
-
+        <p>CatShop - 2024 - Todos los derechos reservados</p>
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
 </html>
+<!--FLEXBOX: Organizar la pagina-->
