--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,17 +20,24 @@
 <body>
 
     <header>
-        <nav>
-        <a href="../index.html">
-            <img src="../img/logo.png" alt="logo" class="logo">
-            <p class="marca">CatShop</p>
-            </a>
-            <ul>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="#">Sobre Nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand align-middle marca" href="../index.html">
+                    <img src="../img/logo.png" alt="logo" class="logo">
+                    CatShop
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link" href="./productos.html">Productos</a>
+                        <a class="nav-link" href="./servicios.html">Servicios</a>
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                        <a class="nav-link active" href="#">Sobre Nosotros</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -42,14 +50,15 @@
         </p>
     </main>
 
-    <footer>
-        <img src="../img/logo.png" alt="logo" class="logo">
-        <img src="../img/gmail.png" alt="gmail" class="logo">
-        <p>lorem.ipsum@gmail.com</p>
-        <a href="https://www.instagram.com/" target="_blank">
-            <img src="../img/logoinstagram.png" alt="instagram" class="logo">
-        </a>
-        <p>CatShop - 2024 - Todos los derechos reservados</p>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
+        <div class="col-md-4 align-items-center">
+            <img src="../img/logo.png" alt="logo" class="logo">
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2024 CatShop</span>
+        </div>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a></li>
+        </ul>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
