Index mejorado e implementado codigo responsive

--- a/index.html
+++ b/index.html
@@ -40,17 +40,27 @@
             </div>
         </nav>
     </header>
-
+    
     <main class="flex-grow-1">
-        <h1>Todo para tu gato</h1>
-        <p>En CatShop encontrarás todo lo que necesitas para tu gato, lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem assumenda fugit, impedit suscipit veniam corrupti, rerum tenetur, quidem nobis harum molestiae? Modi, veritatis? Ducimus laudantium ipsum iste atque vero ratione?</p>
-        <a href="./pages/productos.html">
-            <button>Nuestros productos</button>
-        </a>
-        <a href="./pages/servicios.html">
-            <button>Nuestros servicios</button>
-        </a>
-        <img src="./img/gatocama.png" class="imagenesExtra" alt="Gato sobre una cama">
+        <section class="indexGridContainer">
+            <div class="titulo">
+                <h1>Todo para tu gato</h1>
+            </div>
+            <div class="parrafo">
+                <p>En CatShop encontrarás todo lo que necesitas para tu gato, lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem assumenda fugit, impedit suscipit veniam corrupti, rerum tenetur, quidem nobis harum molestiae? Modi, veritatis? Ducimus laudantium ipsum iste atque vero ratione Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eum esse enim est laudantium deleniti! Blanditiis odio veniam perferendis reiciendis sit unde quisquam modi ab cum voluptatem recusandae, excepturi fugiat?</p>
+            </div>
+            <div class="botones">
+                <a href="./pages/productos.html">
+                    <button>Nuestros productos</button>
+                </a>
+                <a href="./pages/servicios.html">
+                    <button>Nuestros servicios</button>
+                </a>
+            </div>
+            <div class="imagen">
+                <img src="./img/gatocama.png"alt="Gato sobre una cama">
+            </div>
+        </section>
     </main>
 
         <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
@@ -70,4 +80,4 @@
 
 </html>
 <!--BOOTSTRAP: Mejorar header y footer - HECHO-->
-<!--GRID DE BOOTSTRAP: Organizar la página-->
+<!--GRID DE BOOTSTRAP: Organizar la página HECHO-->
