Mejorado la pagina sobre nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,12 +42,20 @@
     </header>
 
     <main>
-        <h1>Sobre nosotros</h1>
-        <p> Creamos esta empresa porque lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
-        <img src="../img/nuestrogato.png" class="imagenesExtra" alt="Gato a upa">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nulla officiis dolorem hic. Quidem quisquam odio ipsam voluptatibus sint fugiat repudiandae nemo? Cupiditate vitae vero totam neque repellendus, quis ut!
-        </p>
+        <h1>Sobre Nosotros</h1>
+        <div class="contmayor">
+        <div class="nosotrosText">
+            <p>Somos lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
+            <h2>¿Por que?</h2>
+            <p>Creamos esta empresa porque lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
+            <h2>¿Que nos motiva?</h2>
+            <p>Pensamos que Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus obcaecati neque unde laborum omnis a facere perferendis eos quibusdam incidunt aspernatur ipsam, quisquam, nulla quas odit. Consequuntur odio sint veritatis, earum provident cumque et animi consequatur, ut quae cum.</p>
+        </div>
+        <div class="nosotrosImages">
+            <img src="../img/nuestrogato.png" class="imagenesExtra" alt="Gato a upa">
+            <img src="../img/cepillogato.png" class="imagenesExtra" alt="Peinando a un gato">
+        </div>
+        </div>
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
@@ -66,4 +74,4 @@
 </body>
 
 </html>
-<!--BOX MODELLING: Organizar la pagina-->
+<!--FLEXBOX: Organizar la pagina - HECHO-->
