--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,27 +44,185 @@
     <main>
         <h1>Nuestros productos</h1>
         <h2>Alimentos</h2>
-        <div class="producto">
-            <img src="../img/placeholderProducto.png" alt="Placeholder">
-            <p>lorem ipsum</p>
-            <p>$xxxx</p>
+
+        <div class="row">
+          <div class="col-md-8 col-lg-6">
+            <div id="carouselExampleIndicators" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../img/placeholder1.png" class="d-block w-100" alt="placeholder">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/placeholder2.png" class="d-block w-100" alt="placeholder">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/placeholder3.png" class="d-block w-100" alt="placeholder">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/placeholder4.png" class="d-block w-100" alt="placeholder">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-6">
+            <div class="row row-cols-2 row-cols-md-1 row-cols-lg-2 g-4">
+                <div class="col">
+                    <div class="product">
+                      <img src="../img/placeholderProducto.png" alt="Placeholder">
+                      <p>lorem ipsum</p>
+                      <p>$xxxx</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="product">
+                      <img src="../img/placeholderProducto.png" alt="Placeholder">
+                      <p>lorem ipsum</p>
+                      <p>$xxxx</p>
+                    </div>
+                </div>
+                <div class="col">
+                  <div class="product d-md-none d-lg-flex">
+                    <img src="../img/placeholderProducto.png" alt="Placeholder">
+                    <p>lorem ipsum</p>
+                    <p>$xxxx</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="product d-md-none d-lg-flex">
+                    <img src="../img/placeholderProducto.png" alt="Placeholder">
+                    <p>lorem ipsum</p>
+                    <p>$xxxx</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-none d-md-flex d-lg-none">
+            <div class="col">
+              <div class="product">
+                <img src="../img/placeholderProducto.png" alt="Placeholder">
+                <p>lorem ipsum</p>
+                <p>$xxxx</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product">
+                <img src="../img/placeholderProducto.png" alt="Placeholder">
+                <p>lorem ipsum</p>
+                <p>$xxxx</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product">
+                <img src="../img/placeholderProducto.png" alt="Placeholder">
+                <p>lorem ipsum</p>
+                <p>$xxxx</p>
+              </div>
+            </div>
         </div>
-        <div class="producto">
-            <img src="../img/placeholderProducto.png" alt="Placeholder">
-            <p>lorem ipsum</p>
-            <p>$xxxx</p>
-        </div>
+
         <h2>Juguetes</h2>
-        <div class="producto">
-            <img src="../img/placeholderProducto.png" alt="Placeholder">
-            <p>lorem ipsum</p>
-            <p>$xxxx</p>
-        </div>
-        <div class="producto">
-            <img src="../img/placeholderProducto.png" alt="Placeholder">
-            <p>lorem ipsum</p>
-            <p>$xxxx</p>
-        </div>  
+        <div class="row">
+          <div class="col-md-8 col-lg-6">
+            <div id="carouselExampleIndicators" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../img/placeholder1.png" class="d-block w-100" alt="placeholder">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/placeholder2.png" class="d-block w-100" alt="placeholder">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/placeholder3.png" class="d-block w-100" alt="placeholder">
+                </div>
+                <div class="carousel-item">
+                  <img src="../img/placeholder4.png" class="d-block w-100" alt="placeholder">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-6">
+            <div class="row row-cols-2 row-cols-md-1 row-cols-lg-2 g-4">
+                <div class="col">
+                    <div class="product">
+                      <img src="../img/placeholderProducto.png" alt="Placeholder">
+                      <p>lorem ipsum</p>
+                      <p>$xxxx</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="product">
+                      <img src="../img/placeholderProducto.png" alt="Placeholder">
+                      <p>lorem ipsum</p>
+                      <p>$xxxx</p>
+                    </div>
+                </div>
+                <div class="col">
+                  <div class="product d-md-none d-lg-flex">
+                    <img src="../img/placeholderProducto.png" alt="Placeholder">
+                    <p>lorem ipsum</p>
+                    <p>$xxxx</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="product d-md-none d-lg-flex">
+                    <img src="../img/placeholderProducto.png" alt="Placeholder">
+                    <p>lorem ipsum</p>
+                    <p>$xxxx</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4 d-none d-md-flex d-lg-none">
+            <div class="col">
+              <div class="product">
+                <img src="../img/placeholderProducto.png" alt="Placeholder">
+                <p>lorem ipsum</p>
+                <p>$xxxx</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product">
+                <img src="../img/placeholderProducto.png" alt="Placeholder">
+                <p>lorem ipsum</p>
+                <p>$xxxx</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product">
+                <img src="../img/placeholderProducto.png" alt="Placeholder">
+                <p>lorem ipsum</p>
+                <p>$xxxx</p>
+              </div>
+            </div>
+        </div> 
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
@@ -83,4 +241,4 @@
 </body>
 
 </html>
-<!--BOOTSTRAP: Añadir un carousel-->
+<!--BOOTSTRAP: Añadir un carousel y organizar la pagina-->
