Mejorado la pagina de servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -43,12 +43,36 @@
 
     <main>
         <h1>Nuestros servicios</h1>
-        <h2>Peluquería</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet cum officiis perferendis perspiciatis veniam delectus nostrum veritatis pariatur eaque aliquam exercitationem expedita est sequi libero nobis ut sapiente qui alias, corrupti natus autem aperiam odit molestiae quos. Quae veniam maiores ipsa, obcaecati provident ab alias sunt soluta incidunt facilis! Officia.</p>
-            <img src="../img/peluqueria.png" class="imagenesExtra" alt="Gato en peluquería">
-        <h2>Cuidado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam reiciendis dolor officia quae inventore deleniti quos magnam dignissimos reprehenderit, autem praesentium maiores deserunt recusandae suscipit, vel illum cum molestias incidunt. Facere nulla voluptatum, aspernatur quae natus, quo porro officiis illo dolorem voluptatem exercitationem quasi animi soluta tempora magnam asperiores quisquam!</p>
-            <img src="../img/cuidado.png" class="imagenesExtra" alt="Gatos siendo cuidados">
+        <section class="serviciosGridContainer">
+            <div class="titulo">
+                <h2>Peluquería</h2>
+            </div>
+            <div class="precio">
+                <h2>$xxxxx</h2>
+            </div>
+            <div class="parrafo">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet cum officiis perferendis perspiciatis veniam delectus nostrum veritatis pariatur eaque aliquam exercitationem expedita est sequi libero nobis ut sapiente qui alias, corrupti natus autem aperiam odit molestiae quos. Quae veniam maiores ipsa, obcaecati provident ab alias sunt soluta incidunt facilis! Officia.</p>
+            </div>
+            <div class="imagen">
+                <img src="../img/peluqueria.png"alt="Gato en peluquería">
+            </div>
+        </section>
+
+        <section class="serviciosGridContainer">
+            <div class="titulo">
+                <h2>Cuidado</h2>
+            </div>
+            <div class="precio">
+                <h2>$xxxxx</h2>
+            </div>
+            <div class="parrafo">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet cum officiis perferendis perspiciatis veniam delectus nostrum veritatis pariatur eaque aliquam exercitationem expedita est sequi libero nobis ut sapiente qui alias, corrupti natus autem aperiam odit molestiae quos. Quae veniam maiores ipsa, obcaecati provident ab alias sunt soluta incidunt facilis! Officia.</p>
+            </div>
+            <div class="imagen">
+                <img src="../img/cuidado.png"alt="Gato en peluquería">
+            </div>
+        </section>
+
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
