Trabajo Final v0.2 (Preentregable 2)

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -43,7 +43,7 @@
 
     <main>
         <h1>Sobre Nosotros</h1>
-        <div class="contmayor">
+        <div class="allContainer">
         <div class="nosotrosText">
             <p>Somos lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
             <h2>¿Por que?</h2>
@@ -74,4 +74,3 @@
 </body>
 
 </html>
-<!--FLEXBOX: Organizar la pagina - HECHO-->
