--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,6 +43,34 @@
 
     <main>
         <h1>Contacto</h1>
+
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <div>
+                    <p>Para contactarnos podés enviarnos un mensaje desde el siguiente formulario:</p>
+                    <form>
+                        <input placeholder="Nombre y Apellido">
+                        <input placeholder="Correo Electronico">
+                        <textarea placeholder="Tu mensaje" class="formMensaje"></textarea>
+                        <button class="align-middle" type="submit" value="Enviar">Enviar</button>
+                    </form>
+                    <p>O enviarnos un mensaje directo:</p>
+                    <i class="bi bi-whatsapp contactIcons"></i>
+                    <p>A nuestro Whatsapp, al +54 xxxx xxxxxx</p>
+                    <i class="bi bi-instagram contactIcons"></i>
+                    <p>A nuestro Instagram, @catshop123</p>
+                    <i class="bi bi-envelope contactIcons"></i>
+                    <p>Por email, a cat.shop@gmail.com</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <p>También podés encontrarnos en nuestro local en:</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.98402065547197!2d-60.57381295439696!3d-33.89294600060821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b9b55dd69e9eb7%3A0xa13a466429410869!2sCucha%20Cucha%20Pergamino!5e0!3m2!1ses!2sar!4v1720731567310!5m2!1ses!2sar" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+
+<!--
         <div class="contactBox">
             <p>Para contactarnos podés enviarnos un mensaje desde el siguiente formulario:</p>
             <form>
@@ -56,11 +84,12 @@
             <p>A nuestro Whatsapp, al +54 xxxx xxxxxx</p>
             <i class="bi bi-instagram"></i>
             <p>A nuestro Instagram, @catshop123</p>
-        </div><!--
-        --><div class="contactBox">
+        </div>
+        <->
+        <div class="contactBox">
             <p>También podés encontrarnos en nuestro local en:</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.98402065547197!2d-60.57381295439696!3d-33.89294600060821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b9b55dd69e9eb7%3A0xa13a466429410869!2sCucha%20Cucha%20Pergamino!5e0!3m2!1ses!2sar!4v1720731567310!5m2!1ses!2sar" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </div>-->
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
