--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand align-middle marca" href="../index.html">
+                <a class="navbar-brand align-middle" href="../index.html">
                     <img src="../img/logo.png" alt="logo" class="logo">
                     CatShop
                 </a>
@@ -31,6 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
+                        <a class="nav-link" href="../index.html">Inicio</a>
                         <a class="nav-link" href="./productos.html">Productos</a>
                         <a class="nav-link" href="./servicios.html">Servicios</a>
                         <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -43,18 +44,18 @@
 
     <main>
         <h1>Sobre Nosotros</h1>
-        <div class="allContainer">
-        <div class="nosotrosText">
-            <p>Somos lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
-            <h2>¿Por que?</h2>
-            <p>Creamos esta empresa porque lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
-            <h2>¿Que nos motiva?</h2>
-            <p>Pensamos que Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus obcaecati neque unde laborum omnis a facere perferendis eos quibusdam incidunt aspernatur ipsam, quisquam, nulla quas odit. Consequuntur odio sint veritatis, earum provident cumque et animi consequatur, ut quae cum.</p>
-        </div>
-        <div class="nosotrosImages">
-            <img src="../img/nuestrogato.png" class="imagenesExtra" alt="Gato a upa">
-            <img src="../img/cepillogato.png" class="imagenesExtra" alt="Peinando a un gato">
-        </div>
+        <div class="nosotrosContainer">
+            <div class="nosotrosText">
+                <p>Somos lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
+                <h2>¿Por que?</h2>
+                <p>Creamos esta empresa porque lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
+                <h2>¿Que nos motiva?</h2>
+                <p>Pensamos que Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus obcaecati neque unde laborum omnis a facere perferendis eos quibusdam incidunt aspernatur ipsam, quisquam, nulla quas odit. Consequuntur odio sint veritatis, earum provident cumque et animi consequatur, ut quae cum.</p>
+            </div>
+            <div class="nosotrosImages">
+                <img src="../img/nuestrogato.png" class="imagenesExtra" alt="Gato a upa">
+                <img src="../img/cepillogato.png" class="imagenesExtra" alt="Peinando a un gato">
+            </div>
         </div>
     </main>
 
