--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand align-middle marca" href="../index.html">
+                <a class="navbar-brand align-middle" href="../index.html">
                     <img src="../img/logo.png" alt="logo" class="logo">
                     CatShop
                 </a>
@@ -31,6 +31,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
+                      <a class="nav-link" href="../index.html">Inicio</a>
                         <a class="nav-link active" href="#">Productos</a>
                         <a class="nav-link" href="./servicios.html">Servicios</a>
                         <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -74,7 +75,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-        </div>
+          </div>
           <div class="producto1">
             <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
@@ -97,6 +98,7 @@
           </div>
           </div>
         </div>
+        
         <div class="productosGridContainer">
           <h2 class="titulo">Juguetes</h2>
           <div class="productoCarousel carousel slide">
