Trabajo Final v0.3 (preentregable 3)

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -76,23 +76,23 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <div class="producto1">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto1 trigger1">
+            <img class="imagenProducto anim1" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
-          <div class="producto2">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto2 trigger2">
+            <img class="imagenProducto anim2" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
-          <div class="producto3">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto3 trigger3">
+            <img class="imagenProducto anim3" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
-          <div class="producto4">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto4 trigger4">
+            <img class="imagenProducto anim4" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
@@ -131,23 +131,23 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
-          <div class="producto1">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto1 trigger5">
+            <img class="imagenProducto anim5" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
-          <div class="producto2">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto2 trigger6">
+            <img class="imagenProducto anim6" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
-          <div class="producto3">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto3 trigger7">
+            <img class="imagenProducto anim7" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
-          <div class="producto4">
-            <img class="imagenProducto" src="../img/placeholderProducto.png" alt="Placeholder">
+          <div class="producto4 trigger8">
+            <img class="imagenProducto anim8" src="../img/placeholderProducto.png" alt="Placeholder">
             <p class="tituloProducto">lorem ipsum</p>
             <p class="precioProducto">$xxxx</p>
           </div>
