Mejorado, completado y optimizado los 5 HTML

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </nav>
     </header>
     
-    <main class="flex-grow-1">
+    <main class="flex-grow-1 indexMain">
         <section class="indexGridContainer">
             <div class="titulo">
                 <h1>Todo para tu gato</h1>
             </div>
             <div class="parrafo">
-                <p>En CatShop encontrarás todo lo que necesitas para tu gato, lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem assumenda fugit, impedit suscipit veniam corrupti, rerum tenetur, quidem nobis harum molestiae? Modi, veritatis? Ducimus laudantium ipsum iste atque vero ratione Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eum esse enim est laudantium deleniti! Blanditiis odio veniam perferendis reiciendis sit unde quisquam modi ab cum voluptatem recusandae, excepturi fugiat?</p>
+                <p>En CatShop encontrarás todo lo que necesitas para tu gato. Desde alimentos de alta calidad hasta los juguetes mas divertidos, en nuestra tienda tenemos una colección de productos diseñada para ofrecer solo lo mejor del mercado. Explora nuestra tienda y descubre cómo podemos hacer la diferencia en la vida de tu mascota felina.</p>
             </div>
             <div class="botones">
                 <a href="./pages/productos.html">
