--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,7 @@
                     <p>Por email, a cat.shop@gmail.com</p>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 align-baseline">
                 <p>También podés encontrarnos en nuestro local en:</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d413.98402065547197!2d-60.57381295439696!3d-33.89294600060821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b9b55dd69e9eb7%3A0xa13a466429410869!2sCucha%20Cucha%20Pergamino!5e0!3m2!1ses!2sar!4v1720731567310!5m2!1ses!2sar" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
