--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,11 +46,12 @@
         <h1>Sobre Nosotros</h1>
         <div class="nosotrosContainer">
             <div class="nosotrosText">
-                <p>Somos lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
-                <h2>¿Por que?</h2>
-                <p>Creamos esta empresa porque lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero est nisi, aliquam neque optio excepturi earum incidunt vitae consequatur! Tempore impedit officiis quisquam aperiam molestias magnam obcaecati iste consectetur!</p>
+                <h2>¿Quienes somos?</h2>
+                <p>En CatShop, somos un equipo apasionado de amantes de los gatos dedicados a ofrecer los mejores productos para tus felinos. Desde su creación, nuestra misión ha sido proporcionar una selección cuidadosamente curada de alimentos, juguetes, y accesorios que no solo cumplen con los estándares más altos de calidad, sino que también enriquecen la vida de tus mascotas. Cada miembro de nuestro equipo comparte una profunda pasión por los gatos y un compromiso genuino con el bienestar animal.</p>
+                <h2>¿Por que lo hacemos?</h2>
+                <p>Nuestra pasión por los gatos no es solo una parte de nuestro trabajo; es el corazón de todo lo que hacemos. Fundamos CatShop porque creemos que cada gato merece lo mejor, y eso comienza con los productos adecuados. Nos dimos cuenta de que muchos dueños de gatos buscan opciones confiables y de alta calidad, y queríamos ser la respuesta a esa necesidad. Cada producto en nuestra tienda es seleccionado con cuidado, pensando en la salud, la comodidad y la diversión de tus amigos felinos.</p>
                 <h2>¿Que nos motiva?</h2>
-                <p>Pensamos que Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus obcaecati neque unde laborum omnis a facere perferendis eos quibusdam incidunt aspernatur ipsam, quisquam, nulla quas odit. Consequuntur odio sint veritatis, earum provident cumque et animi consequatur, ut quae cum.</p>
+                <p>Lo que nos motiva día a día es ver a los gatos felices y saludables. Cada vez que vemos un gato jugando con un juguete de CatShop o disfrutando de una comida deliciosa que hemos seleccionado, sabemos que estamos haciendo algo bien. Nos inspira saber que estamos contribuyendo a una vida mejor para estos maravillosos animales. Nuestro objetivo es seguir creciendo y mejorando, siempre con el bienestar de los gatos en el centro de nuestras decisiones. ¡Gracias por ser parte de nuestra comunidad y permitirnos ser parte de la vida de tus gatos!</p>
             </div>
             <div class="nosotrosImages">
                 <img src="../img/nuestrogato.png" class="imagenesExtra" alt="Gato a upa">
