--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -49,10 +49,10 @@
                 <h2>Peluquería</h2>
             </div>
             <div class="precio">
-                <h2>$xxxxx</h2>
+                <h2>Desde $14999</h2>
             </div>
             <div class="parrafo">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet cum officiis perferendis perspiciatis veniam delectus nostrum veritatis pariatur eaque aliquam exercitationem expedita est sequi libero nobis ut sapiente qui alias, corrupti natus autem aperiam odit molestiae quos. Quae veniam maiores ipsa, obcaecati provident ab alias sunt soluta incidunt facilis! Officia.</p>
+                <p>En CatShop, entendemos la importancia de un pelaje saludable y bien cuidado. Nuestro servicio de peluquería felina ofrece cortes precisos, deslanado y baños especiales diseñados para mantener a tu gato limpio y cómodo. Nuestro equipo de expertos está capacitado para manejar a tu mascota con cuidado y cariño, asegurando una experiencia relajante y libre de estrés.</p>
             </div>
             <div class="imagen">
                 <img src="../img/peluqueria.png"alt="Gato en peluquería">
@@ -64,10 +64,10 @@
                 <h2>Cuidado</h2>
             </div>
             <div class="precio">
-                <h2>$xxxxx</h2>
+                <h2>$19999 por día</h2>
             </div>
             <div class="parrafo">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet cum officiis perferendis perspiciatis veniam delectus nostrum veritatis pariatur eaque aliquam exercitationem expedita est sequi libero nobis ut sapiente qui alias, corrupti natus autem aperiam odit molestiae quos. Quae veniam maiores ipsa, obcaecati provident ab alias sunt soluta incidunt facilis! Officia.</p>
+                <p>El bienestar de tu gato es nuestra prioridad. En nuestro servicio de cuidado de gatos, ofrecemos atención personalizada para asegurar que tu felino esté en las mejores manos. Desde visitas a domicilio para alimentar y jugar con tu gato, hasta servicios especializados para sus necesidades particulares, nos encargamos de que tu mascota reciba el mejor cuidado mientras estás ausente.</p>
             </div>
             <div class="imagen">
                 <img src="../img/cuidado.png"alt="Gato en peluquería">
