--- a/pages/productos.html
+++ b/pages/productos.html
@@ -46,110 +46,142 @@
         <h1>Nuestros productos</h1>
         <div class="productosGridContainer">
           <h2 class="titulo">Alimentos</h2>
-          <div class="productoCarousel carousel slide">
+          <div class="productoCarousel carousel slide" id="carouselAlimentos">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselAlimentos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselAlimentos" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselAlimentos" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselAlimentos" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/placeholder1.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/catpro.png" alt="Placeholder">
+                  <p class="tituloProducto">Catpro vias urinarias adultos 1kg</p>
+                  <p class="precioProducto"><s>$5999</s>   <span class="oferta">$4999</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/placeholder2.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/royalcanin.png" alt="Placeholder">
+                  <p class="tituloProducto">Royal Canin hipoalergénico 2kg</p>
+                  <p class="precioProducto"><s>$35999</s>   <span class="oferta">$29999</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/placeholder3.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/proplan.png" alt="Placeholder">
+                  <p class="tituloProducto">Purina Pro Plan adultos 1kg</p>
+                  <p class="precioProducto"><s>$12999</s>   <span class="oferta">$9999</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/placeholder4.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/sabrositos.png" alt="Placeholder">
+                  <p class="tituloProducto">Sabrositos adultos 1kg</p>
+                  <p class="precioProducto"><s>$11499</s>   <span class="oferta">$8999</span></p>
+                </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAlimentos" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselAlimentos" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <div class="producto1 trigger1">
-            <img class="imagenProducto anim1" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto1 trigger">
+            <img class="imagenProducto anim" src="../img/whiskas.png" alt="Placeholder">
+            <p class="tituloProducto">Whiskas adultos 1,5kg</p>
+            <p class="precioProducto">$7499</p>
           </div>
-          <div class="producto2 trigger2">
-            <img class="imagenProducto anim2" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto2 trigger">
+            <img class="imagenProducto anim" src="../img/raza.png" alt="Placeholder">
+            <p class="tituloProducto">Raza adultos 1kg</p>
+            <p class="precioProducto">$2999</p>
           </div>
-          <div class="producto3 trigger3">
-            <img class="imagenProducto anim3" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto3 trigger">
+            <img class="imagenProducto anim" src="../img/catchow.png" alt="Placeholder">
+            <p class="tituloProducto">Purina Cat Chow cachorros 1kg</p>
+            <p class="precioProducto">$6499</p>
           </div>
-          <div class="producto4 trigger4">
-            <img class="imagenProducto anim4" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto4 trigger">
+            <img class="imagenProducto anim" src="../img/whiskassobre.png" alt="Placeholder">
+            <p class="tituloProducto">Whiskas adultos sobre 85g</p>
+            <p class="precioProducto">$599</p>
           </div>
           </div>
         </div>
         
         <div class="productosGridContainer">
           <h2 class="titulo">Juguetes</h2>
-          <div class="productoCarousel carousel slide">
+          <div class="productoCarousel carousel slide" id="carouselJuguetes">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselJuguetes" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselJuguetes" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselJuguetes" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselJuguetes" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/placeholder1.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/rascador.png" alt="Placeholder">
+                  <p class="tituloProducto">Poste rascador</p>
+                  <p class="precioProducto"><s>$24999</s>   <span class="oferta">$19999</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/placeholder2.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/tunel.png" alt="Placeholder">
+                  <p class="tituloProducto">Tunel plegable con 4 salidas</p>
+                  <p class="precioProducto"><s>$22499</s>   <span class="oferta">$16999</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/placeholder3.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                  <img class="imagenProducto anim" src="../img/plumero.png" alt="Placeholder">
+                  <p class="tituloProducto">Plumero flexible</p>
+                  <p class="precioProducto"><s>$5499</s>   <span class="oferta">$3999</span></p>
+                </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/placeholder4.png" class="img-fluid d-block w-100" alt="placeholder">
+                <div class="producto0 trigger">
+                <img class="imagenProducto anim" src="../img/catnip.png" alt="Placeholder">
+                <p class="tituloProducto">Bolas de hierba para gatos</p>
+                <p class="precioProducto"><s>$3999</s>   <span class="oferta">$2999</span></p>
+              </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselJuguetes" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselJuguetes" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
         </div>
-          <div class="producto1 trigger5">
-            <img class="imagenProducto anim5" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto1 trigger">
+            <img class="imagenProducto anim" src="../img/torre.png" alt="Placeholder">
+            <p class="tituloProducto">Torre rascadora 1.65m</p>
+            <p class="precioProducto">$249999</p>
           </div>
-          <div class="producto2 trigger6">
-            <img class="imagenProducto anim6" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto2 trigger">
+            <img class="imagenProducto anim" src="../img/raton.png" alt="Placeholder">
+            <p class="tituloProducto">Ratón a cuerda</p>
+            <p class="precioProducto">$4999</p>
           </div>
-          <div class="producto3 trigger7">
-            <img class="imagenProducto anim7" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto3 trigger">
+            <img class="imagenProducto anim" src="../img/pelota.png" alt="Placeholder">
+            <p class="tituloProducto">Pelotas de goma eva X3</p>
+            <p class="precioProducto">$3499</p>
           </div>
-          <div class="producto4 trigger8">
-            <img class="imagenProducto anim8" src="../img/placeholderProducto.png" alt="Placeholder">
-            <p class="tituloProducto">lorem ipsum</p>
-            <p class="precioProducto">$xxxx</p>
+          <div class="producto4 trigger">
+            <img class="imagenProducto anim" src="../img/rueda.png" alt="Placeholder">
+            <p class="tituloProducto">Rueda de ejercicio</p>
+            <p class="precioProducto">$179999</p>
           </div>
           </div>
         </div>
