--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
-    <title>CatShop</title>
+    <title>CatShop - Tienda para gatos</title>
+    <meta name="description" content="Descubre la mejor tienda para gatos. En CatShop encontrarás los mejores alimentos, juguetes y servicios para tu mascota felina. ¡Explora ahora!">
+    <meta name="keywords" content="tienda para gatos, productos para gatos, servicios para gatos, alimentos para gatos, juguetes para gatos, accesorios para gatos, catshop, pet shop">
 </head>
 
 <body>
@@ -59,7 +61,7 @@
                 </a>
             </div>
             <div class="imagen">
-                <img src="./img/gatocama.png"alt="Gato sobre una cama">
+                <img src="./img/gatocama.png" alt="Gato sobre una cama">
             </div>
         </section>
     </main>
