--- a/pages/mailenviado.html
+++ b/pages/mailenviado.html
@@ -14,9 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
-    <title>CatShop - Servicios para tu mascota</title>
-    <meta name="description" content="Descubre nuestros servicios para felinos. En CatShop, ofrecemos peluquería y cuidado para mantener a tu gato feliz y saludable.">
-    <meta name="keywords" content="peluqueria para gatos, cuidado de gatos, productos para gatos, cuidado de gatos, servicios, catshop, pet shop">
+    <title>CatShop</title>
 </head>
 
 <body>
@@ -35,7 +33,7 @@
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link" href="../index.html">Inicio</a>
                         <a class="nav-link" href="./productos.html">Productos</a>
-                        <a class="nav-link active" href="#">Servicios</a>
+                        <a class="nav-link" href="./servicios.html">Servicios</a>
                         <a class="nav-link" href="./contacto.html">Contacto</a>
                         <a class="nav-link" href="./nosotros.html">Sobre Nosotros</a>
                     </div>
@@ -45,37 +43,11 @@
     </header>
 
     <main>
-        <h1>Nuestros servicios</h1>
-        <section class="serviciosGridContainer">
-            <div class="titulo">
-                <h2>Peluquería</h2>
-            </div>
-            <div class="precio">
-                <h2>Desde $14999</h2>
-            </div>
-            <div class="parrafo">
-                <p>En CatShop, entendemos la importancia de un pelaje saludable y bien cuidado. Nuestro servicio de peluquería felina ofrece cortes precisos, deslanado y baños especiales diseñados para mantener a tu gato limpio y cómodo. Nuestro equipo de expertos está capacitado para manejar a tu mascota con cuidado y cariño, asegurando una experiencia relajante y libre de estrés.</p>
-            </div>
-            <div class="imagen">
-                <img src="../img/peluqueria.png" alt="Gato en peluquería">
-            </div>
-        </section>
-
-        <section class="serviciosGridContainer">
-            <div class="titulo">
-                <h2>Cuidado</h2>
-            </div>
-            <div class="precio">
-                <h2>$19999 por día</h2>
-            </div>
-            <div class="parrafo">
-                <p>El bienestar de tu gato es nuestra prioridad. En nuestro servicio de cuidado de gatos, ofrecemos atención personalizada para asegurar que tu felino esté en las mejores manos. Desde visitas a domicilio para alimentar y jugar con tu gato, hasta servicios especializados para sus necesidades particulares, nos encargamos de que tu mascota reciba el mejor cuidado mientras estás ausente.</p>
-            </div>
-            <div class="imagen">
-                <img src="../img/cuidado.png" alt="Gatos siendo cuidados">
-            </div>
-        </section>
-
+        <h1>Mensaje enviado</h1>
+        <h2>¡Gracias por contactarnos!</h2>
+        <a href="../index.html">
+            <button>Volver al inicio</button>
+        </a>
     </main>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center container-fluid py-3">
@@ -85,10 +57,10 @@
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
             <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a></li>
         </ul>
     </footer>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
