--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,14 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
-    <title>CatShop</title>
+    <title>CatShop - Contacto y ubicación</title>
+    <meta name="description" content="Contactanos para obtener más información sobre nuestros productos y servicios. Envíanos un mensaje o visítanos en nuestro local.">
+    <meta name="keywords" content="contacto, servicios para gatos, productos para gatos, catshop, pet shop">
 </head>
 
 <body>
@@ -48,10 +50,11 @@
             <div class="col-md-6 text-center">
                 <div>
                     <p>Para contactarnos podés enviarnos un mensaje desde el siguiente formulario:</p>
-                    <form>
-                        <input placeholder="Nombre y Apellido">
-                        <input placeholder="Correo Electronico">
-                        <textarea placeholder="Tu mensaje" class="formMensaje"></textarea>
+                    <form action="https://formsubmit.co/mateoo.hassan@gmail.com" method="POST">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input placeholder="Nombre y Apellido" required>
+                        <input type="email" placeholder="Correo Electronico" required>
+                        <textarea placeholder="Tu mensaje" class="formMensaje" required></textarea>
                         <button class="align-middle" type="submit" value="Enviar">Enviar</button>
                     </form>
                     <p>O enviarnos un mensaje directo:</p>
