--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,14 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
-    <title>CatShop</title>
+    <title>CatShop - Sobre nosotros y nuestros objetivos</title>
+    <meta name="description" content="Conoce más sobre CatShop y nuestra misión de ofrecer los mejores productos y servicios para gatos. Descubre nuestra historia y compromiso con el bienestar animal.">
+    <meta name="keywords" content="sobre nosotros, misión, bienestar animal, productos para gatos, servicios para gatos, catshop, pet shop">
 </head>
 
 <body>
