--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,14 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
-    <title>CatShop</title>
+    <title>CatShop - Alimentos y juguetes</title>
+    <meta name="description" content="Descubre nuestra variedad de alimentos y juguetes de alta calidad para gatos. En CatShop, ofrecemos una amplia selección de productos para tus felinos.">
+    <meta name="keywords" content="alimentos para gatos, juguetes para gatos, productos para gatos, entretenimiento para gatos, catshop, pet shop">
 </head>
 
 <body>
@@ -56,28 +58,28 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/catpro.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/catpro.png" alt="Bolsa de Catpro para vias urinarias">
                   <p class="tituloProducto">Catpro vias urinarias adultos 1kg</p>
                   <p class="precioProducto"><s>$5999</s>   <span class="oferta">$4999</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/royalcanin.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/royalcanin.png" alt="Bolsa de Royal Canin hipoalergénico">
                   <p class="tituloProducto">Royal Canin hipoalergénico 2kg</p>
                   <p class="precioProducto"><s>$35999</s>   <span class="oferta">$29999</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/proplan.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/proplan.png" alt="Bolsa de Pro Plan">
                   <p class="tituloProducto">Purina Pro Plan adultos 1kg</p>
                   <p class="precioProducto"><s>$12999</s>   <span class="oferta">$9999</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/sabrositos.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/sabrositos.png" alt="Bolsa de Sabrositos">
                   <p class="tituloProducto">Sabrositos adultos 1kg</p>
                   <p class="precioProducto"><s>$11499</s>   <span class="oferta">$8999</span></p>
                 </div>
@@ -93,22 +95,22 @@
             </button>
           </div>
           <div class="producto1 trigger">
-            <img class="imagenProducto anim" src="../img/whiskas.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/whiskas.png" alt="Bolsa de Whiskas">
             <p class="tituloProducto">Whiskas adultos 1,5kg</p>
             <p class="precioProducto">$7499</p>
           </div>
           <div class="producto2 trigger">
-            <img class="imagenProducto anim" src="../img/raza.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/raza.png" alt="Bolsa de Raza">
             <p class="tituloProducto">Raza adultos 1kg</p>
             <p class="precioProducto">$2999</p>
           </div>
           <div class="producto3 trigger">
-            <img class="imagenProducto anim" src="../img/catchow.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/catchow.png" alt="Bolsa de Cat Chow para cachorros">
             <p class="tituloProducto">Purina Cat Chow cachorros 1kg</p>
             <p class="precioProducto">$6499</p>
           </div>
           <div class="producto4 trigger">
-            <img class="imagenProducto anim" src="../img/whiskassobre.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/whiskassobre.png" alt="Sobre de Whiskas">
             <p class="tituloProducto">Whiskas adultos sobre 85g</p>
             <p class="precioProducto">$599</p>
           </div>
@@ -127,28 +129,28 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/rascador.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/rascador.png" alt="Poste rascador">
                   <p class="tituloProducto">Poste rascador</p>
                   <p class="precioProducto"><s>$24999</s>   <span class="oferta">$19999</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/tunel.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/tunel.png" alt="Tunel para gatos">
                   <p class="tituloProducto">Tunel plegable con 4 salidas</p>
                   <p class="precioProducto"><s>$22499</s>   <span class="oferta">$16999</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="producto0 trigger">
-                  <img class="imagenProducto anim" src="../img/plumero.png" alt="Placeholder">
+                  <img class="imagenProducto anim" src="../img/plumero.png" alt="Plumero">
                   <p class="tituloProducto">Plumero flexible</p>
                   <p class="precioProducto"><s>$5499</s>   <span class="oferta">$3999</span></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="producto0 trigger">
-                <img class="imagenProducto anim" src="../img/catnip.png" alt="Placeholder">
+                <img class="imagenProducto anim" src="../img/catnip.png" alt="Bolas de catnip">
                 <p class="tituloProducto">Bolas de hierba para gatos</p>
                 <p class="precioProducto"><s>$3999</s>   <span class="oferta">$2999</span></p>
               </div>
@@ -164,22 +166,22 @@
             </button>
         </div>
           <div class="producto1 trigger">
-            <img class="imagenProducto anim" src="../img/torre.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/torre.png" alt="Torre para gatos">
             <p class="tituloProducto">Torre rascadora 1.65m</p>
             <p class="precioProducto">$249999</p>
           </div>
           <div class="producto2 trigger">
-            <img class="imagenProducto anim" src="../img/raton.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/raton.png" alt="Raton a cuerda">
             <p class="tituloProducto">Ratón a cuerda</p>
             <p class="precioProducto">$4999</p>
           </div>
           <div class="producto3 trigger">
-            <img class="imagenProducto anim" src="../img/pelota.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/pelota.png" alt="Pelotas de goma">
             <p class="tituloProducto">Pelotas de goma eva X3</p>
             <p class="precioProducto">$3499</p>
           </div>
           <div class="producto4 trigger">
-            <img class="imagenProducto anim" src="../img/rueda.png" alt="Placeholder">
+            <img class="imagenProducto anim" src="../img/rueda.png" alt="Rueda para gatos">
             <p class="tituloProducto">Rueda de ejercicio</p>
             <p class="precioProducto">$179999</p>
           </div>
