Trabajo final v1.01 (retoques finales)

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,6 +51,7 @@
                 <div>
                     <p>Para contactarnos podés enviarnos un mensaje desde el siguiente formulario:</p>
                     <form action="https://formsubmit.co/mateoo.hassan@gmail.com" method="POST">
+                        <input type="hidden" name="_next" value="http://catshop.wuaze.com/pages/mailenviado.html">
                         <input type="hidden" name="_captcha" value="false">
                         <input placeholder="Nombre y Apellido" required>
                         <input type="email" placeholder="Correo Electronico" required>
